--- a/index.html
+++ b/index.html
@@ -45,6 +45,55 @@
                 <button type="button" class="btn btn-outline-primary">Register</button>
             </div>
         </nav>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="edu-1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital Learning</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable</p>
+                        <p>content of a page when looking at its </p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="edu-2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital Learning</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable</p>
+                        <p>content of a page when looking at its </p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="edu-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital Learning</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable</p>
+                        <p>content of a page when looking at its </p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
