--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header class="container-fluid">
+        <!-- Navabr Start -->
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
                 <span>EduTech</span>
@@ -45,40 +46,37 @@
                 <button type="button" class="btn btn-outline-primary">Register</button>
             </div>
         </nav>
+        <!-- Navbar End -->
+        <!-- Carousel Start -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner ">
                 <div class="carousel-item active">
-                    <img src="edu-1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="edu-1.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-block d-md-block h-50">
                         <h1>Get Started Digital Learning</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable</p>
-                        <p>content of a page when looking at its </p>
+                        <p class="d-none d-md-block">It is a long established fact that a reader will be distracted
+                            by the readable</p>
+                        <p class="d-none d-md-block">content of a page when looking at its </p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="edu-2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="edu-2.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-block d-md-block h-50">
                         <h1>Get Started Digital Learning</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable</p>
-                        <p>content of a page when looking at its </p>
+                        <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
+                            the readable</p>
+                        <p class="d-none d-md-block">content of a page when looking at its </p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="edu-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="edu-3.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-block d-md-block h-50">
                         <h1>Get Started Digital Learning</h1>
-                        <p>It is a long established fact that a reader will be distracted by the readable</p>
-                        <p>content of a page when looking at its </p>
+                        <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
+                            the readable</p>
+                        <p class="d-none d-md-block">content of a page when looking at its </p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -94,8 +92,78 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+        <!-- Carousel End -->
     </header>
-
+    <main>
+        <!-- Popular Courses -->
+        <section>
+            <div class="text-center">
+                <h1>Discover Our Popular</h1>
+                <h1>Courses</h1>
+                <p>It is a long established fact that a reader will be distracted
+                    by the readable</p>
+                <p>content of a page when looking at its </p>
+            </div>
+            <div class="container">
+                <div class="row row-cols-2 ">
+                    <div class="col d-flex">
+                        <img src="images/course/course-1.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <img src="images/course/course-2.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <img src="images/course/course-3.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <img src="images/course/course-4.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <img src="images/course/course-5.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                    <div class="col d-flex">
+                        <img src="images/course/course-6.png" alt="">
+                        <div>
+                            <h5>Fundamental of UI/UX Design</h5>
+                            <span>These courses are always up to date and are</span>
+                            <p>best suited for people who are beginners</p>
+                            <span>Price:20$</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
