--- a/index.html
+++ b/index.html
@@ -105,65 +105,108 @@
                 <p>content of a page when looking at its </p>
             </div>
             <div class="container">
-                <div class="row row-cols-2 ">
-                    <div class="col d-flex">
-                        <img src="images/course/course-1.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
+                    <div class="card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col d-flex">
-                        <img src="images/course/course-2.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                    <div class="card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col d-flex">
-                        <img src="images/course/course-3.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                    <div class="card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class=" w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col d-flex">
-                        <img src="images/course/course-4.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                    <div class="d-none d-sm-block d-md-none d-lg-block card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col d-flex">
-                        <img src="images/course/course-5.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                    <div class="d-none d-sm-block d-md-none d-lg-block card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col d-flex">
-                        <img src="images/course/course-6.png" alt="">
-                        <div>
-                            <h5>Fundamental of UI/UX Design</h5>
-                            <span>These courses are always up to date and are</span>
-                            <p>best suited for people who are beginners</p>
-                            <span>Price:20$</span>
+                    <div class="d-none d-sm-block d-md-none d-lg-block card mb-3 p-0">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="w-100 img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <p class="card-text">Some quick exapmle text to build on the
+                                        card title and make up the bulk of the card</p>
+                                    <p class="card-text">Price:$20</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
+            <div class="d-flex justify-content-center my-4">
+                <button type="button" class="btn btn-primary">See More Courses</button>
+            </div>
         </section>
+
     </main>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
