--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Carousel End -->
     </header>
     <main>
-        <!-- Popular Courses -->
+        <!-- Popular Courses start -->
         <section>
             <div class="text-center">
                 <h1>Discover Our Popular</h1>
@@ -128,7 +128,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <h5 class="card-title">Javascript Basic to Advanced</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
                                     <p class="card-text">Price:$20</p>
@@ -143,7 +143,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <h5 class="card-title">Fullstack Web Development</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
                                     <p class="card-text">Price:$20</p>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <h5 class="card-title">Digital Marketing</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
                                     <p class="card-text">Price:$20</p>
@@ -173,7 +173,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <h5 class="card-title">Photography Basic Rules</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
                                     <p class="card-text">Price:$20</p>
@@ -188,7 +188,7 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                                    <h5 class="card-title">Motion Graphics</h5>
                                     <p class="card-text">Some quick exapmle text to build on the
                                         card title and make up the bulk of the card</p>
                                     <p class="card-text">Price:$20</p>
@@ -203,7 +203,35 @@
                 <button type="button" class="btn btn-primary">See More Courses</button>
             </div>
         </section>
-
+        <!-- Popular Courses end -->
+        <!-- Explore Elearning Institute start -->
+        <section class="container my-5">
+            <div class=" bg-light bg-gradient container d-flex flex-column flex-sm-row px-0">
+                <img class="img-fluid" src="images/working.png" width=400 alt="">
+                <div class="w-auto my-auto ms-3">
+                    <h1>Explore the elearning</h1>
+                    <h1>Institute</h1>
+                    <p>A learning system based on formalised teaching but with the help of electronic resources is known
+                        as E-learning. While teaching can be based in or out of the classrooms, the use of computers and
+                        the Internet forms the major component of E-learning.</p>
+                    <div class="d-flex justify-content-between flex-wrap flex-sm-wrap">
+                        <div>
+                            <h1>3.2K+</h1>
+                            <p>Online Courses</p>
+                        </div>
+                        <div>
+                            <h1>600+</h1>
+                            <p>Expert Member</p>
+                        </div>
+                        <div>
+                            <h1>1K+</h1>
+                            <p>Rating & Review</p>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary">Read More</button>
+                </div>
+            </div>
+        </section>
     </main>
 
 
