--- a/index.html
+++ b/index.html
@@ -232,6 +232,42 @@
                 </div>
             </div>
         </section>
+        <!-- Explore Elearning Institute end -->
+        <!-- Ready to join start -->
+        <section
+            class="container py-5 my-3 bg-primary d-flex flex-lg-row flex-sm-column flex-column justify-content-lg-around align-items-center rounded">
+            <div class="text-white">
+                <h1>Ready to join</h1>
+                <p>It is a long established fact that a reader will be distracted
+                    by the readable</p>
+            </div>
+            <div>
+                <button type="button" class="btn btn-info" data-bs-toggle="modal"
+                    data-bs-target="#exampleModal">Register Now</button>
+            </div>
+
+            <!-- Modal start -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Registration</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Register for education</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modal end -->
+        </section>
+        <!-- Ready to join end -->
     </main>
 
 
