--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h1>Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted
                             by the readable</p>
-                        <p class="d-none d-md-block">content of a page when looking at its </p>
+                        <p class="d-none d-md-block">content of a page when looking at its layout</p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <h1>Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
-                        <p class="d-none d-md-block">content of a page when looking at its </p>
+                        <p class="d-none d-md-block">content of a page when looking at its layout</p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         <h1>Get Started Digital Learning</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
-                        <p class="d-none d-md-block">content of a page when looking at its </p>
+                        <p class="d-none d-md-block">content of a page when looking at its layout</p>
                         <button type="button" class="btn btn-primary">Get Started</button>
                     </div>
                 </div>
@@ -102,11 +102,11 @@
                 <h1>Courses</h1>
                 <p>It is a long established fact that a reader will be distracted
                     by the readable</p>
-                <p>content of a page when looking at its </p>
+                <p>content of a page when looking at its layout</p>
             </div>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
-                    <div class="card mb-3 p-0">
+                    <div class="card mb-3 p-0 ">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="images/course/course-1.png" class="w-100 img-fluid rounded-start" alt="...">
@@ -268,6 +268,57 @@
             <!-- Modal end -->
         </section>
         <!-- Ready to join end -->
+        <!-- Successful Students start -->
+        <section class="container">
+            <div>
+                <h1>Meet our Successful</h1>
+                <h1>Students</h1>
+                <p>It is a long established fact that a reader will be distracted</p>
+                <p>by the readable content of a page when looking at its layout</p>
+            </div>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4">
+                <div class="col">
+                    <div class="card border border-light">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Mark Twain</p>
+                            <p class="card-text">UIUX Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-light">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Albert Einstein</p>
+                            <p class="card-text">Motion Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-light">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Isaac Newton</p>
+                            <p class="card-text">Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border border-light">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Nicola Tesla</p>
+                            <p class="card-text">Web Developer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex justify-content-center my-3">
+                <button type="button" class="btn btn-primary">View All</button>
+            </div>
+        </section>
+        <!-- Successful Students end -->
     </main>
 
 
