--- a/index.html
+++ b/index.html
@@ -319,6 +319,98 @@
             </div>
         </section>
         <!-- Successful Students end -->
+        <!-- Students Feedback start -->
+        <section class="container">
+            <div class="text-center">
+                <h1>Some Students Feedback</h1>
+                <p>It is a long established fact that a reader will be distracted</p>
+                <p>by the readable content of a page when looking at its layout</p>
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <!-- Students Feedback end -->
+        <!-- FAQ SECTION start-->
+        <section class="container">
+            <div class="text-center">
+                <h1>Frequently Asked Questions</h1>
+                <p>It is a long established fact that a reader will be distracted</p>
+                <p>by the readable content of a page when looking at its layout</p>
+            </div>
+            <div class="accordion accordion-flush d-flex flex-lg-column flex-column flex-sm-column"
+                id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            What are the differences between Flexbox and Grid?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The basic difference between CSS Grid Layout and CSS Flexbox Layout
+                            is that flexbox was designed for layout in one dimension - either a row or a column. Grid
+                            was designed for two-dimensional layout - rows, and columns at the same time. The two
+                            specifications share some common features, however, and if you have already learned how to
+                            use flexbox, the similarities should help you get to grips with Grid.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            What are the differences between Tailwind and Bootstrap?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The main difference between TailwindCSS and Bootstrap is that
+                            Tailwind CSS is not a UI kit. Unlike UI kits such as Bootstrap, Bulma, and Foundation,
+                            Tailwind CSS doesn’t have a default theme or built-in UI components. Instead, it comes with
+                            predesigned widgets you can use to build your site from scratch.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            What is CSS box model?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">The CSS box model is a container that contains multiple properties
+                            including borders, margin, padding, and the content itself. It is used to create the design
+                            and layout of web pages. It can be used as a toolkit for customizing the layout of different
+                            elements. The web browser renders every element as a rectangular box according to the CSS
+                            box model. Box-Model has multiple properties in CSS.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            What is a semantic tag?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Semantic HTML elements are those that clearly describe their meaning
+                            in a human- and machine-readable way.Elements such as header, nav, section, article, aside,
+                            and
+                            footer act more or less like div elements. They group other elements
+                            together into page sections. However where a div tag could
+                            contain any type of information, it is easy to identify what
+                            sort of information would go in a semantic header region.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FAQ SECTION end-->
     </main>
 
 
