--- a/index.html
+++ b/index.html
@@ -411,6 +411,21 @@
             </div>
         </section>
         <!-- FAQ SECTION end-->
+        <!-- Trusted Companies start -->
+        <section class="container my-5">
+            <div class="d-none d-sm-block d-md-none d-lg-block">
+                <h1 class="text-center">Trusted by over 800+ companies</h1>
+                <div class="d-flex justify-content-between">
+                    <img src="images/company/company-1.png" alt="">
+                    <img src="images/company/company-2.png" alt="">
+                    <img src="images/company/company-3.png" alt="">
+                    <img src="images/company/company-4.png" alt="">
+                    <img src="images/company/company-5.png" alt="">
+                    <img src="images/company/company-6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Trusted Companies end -->
     </main>
 
 
