added minor changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="carousel-item active">
                     <img src="edu-1.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1 class="fw-bold">Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started with Digital Institute</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted
                             by the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -65,7 +65,7 @@
                 <div class="carousel-item">
                     <img src="edu-2.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1 class="fw-bold">Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started with Digital Institute</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -75,7 +75,7 @@
                 <div class="carousel-item">
                     <img src="edu-3.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-block d-md-block h-50">
-                        <h1 class="fw-bold">Get Started Digital Learning</h1>
+                        <h1 class="fw-bold">Get Started with Digital Institute</h1>
                         <p class="d-none d-md-block">It is a long established fact that a reader will be distracted by
                             the readable</p>
                         <p class="d-none d-md-block">content of a page when looking at its layout</p>
@@ -213,7 +213,7 @@
             <div class=" bg-light bg-gradient container d-flex flex-column flex-sm-row px-0">
                 <img class="img-fluid" src="images/working.png" width=400 alt="">
                 <div class="w-auto my-auto ms-3">
-                    <h1 class="fw-bold">Explore the elearning</h1>
+                    <h1 class="fw-bold">Explore the Digital</h1>
                     <h1 class="fw-bold">Institute</h1>
                     <p>A learning system based on formalised teaching but with the help of electronic resources is known
                         as E-learning. While teaching can be based in or out of the classrooms, the use of computers and
@@ -242,9 +242,10 @@
         <section
             class="container py-5 my-3 bg-primary d-flex flex-lg-row flex-sm-column flex-column justify-content-lg-around align-items-center rounded">
             <div class="text-white">
-                <h1 class="fw-bold">Ready to join</h1>
+                <h1 class="fw-bold">Ready to join?</h1>
                 <p>It is a long established fact that a reader will be distracted
-                    by the readable</p>
+                    by the</p>
+                <p>readable content of a page when looking at its layout.</p>
             </div>
             <div>
                 <button type="button" class="btn btn-info" data-bs-toggle="modal"
