--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-1 row-cols-lg-2 g-4">
-                    <div class="card mb-3 p-0 ">
+                    <div class="card mb-3 p-0">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="images/course/course-1.png" class="w-100 img-fluid rounded-start" alt="...">
@@ -326,6 +326,62 @@
             </div>
         </section>
         <!-- Successful Students end -->
+
+        <!-- Feedback start -->
+        <section class="container">
+            <div class="text-center">
+                <h1>Some Students Feedback</h1>
+                <p>It is a long established fact that a reader will be distracted</p>
+                <p>by the readable content of a page when looking at its layout</p>
+            </div>
+            <div class="d-flex justify-content-evenly flex-lg-row flex-column flex-sm-column my-5">
+                <div class="border border-dark rounded">
+                    <div class="d-flex justify-content-between px-5 my-5">
+                        <img src="images/comma.png" alt="">
+                        <div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star">
+                            </i>
+                        </div>
+                    </div>
+                    <p class="px-5">Types of education are commonly divided into formal, non-formal, and informal
+                        education. Formal
+                        education takes place in education and training institutions, is usually structured by
+                        curricular
+                        aims and objectives, and learning is typically guided by a teacher.</p>
+                    <div class="d-flex px-5">
+                        <img class="img-fluid h-100" src="images/student/student-5.png" alt="">
+                        <div class="ms-3">
+                            <p>Isaac Newton</p>
+                            <p>UI Designer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="border border-dark rounded">
+                    <div class="d-flex justify-content-between px-5 my-5">
+                        <img src="images/comma.png" alt="">
+                        <div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i
+                                class="fa-solid fa-star">
+                            </i>
+                        </div>
+                    </div>
+                    <p class="px-5">Types of education are commonly divided into formal, non-formal, and informal
+                        education. Formal
+                        education takes place in education and training institutions, is usually structured by
+                        curricular
+                        aims and objectives, and learning is typically guided by a teacher. </p>
+                    <div class="d-flex px-5">
+                        <img class="img-fluid h-100" src="images/student/student-6.png" alt="">
+                        <div class="ms-3">
+                            <p>John Washinton</p>
+                            <p>Graphic Designer</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Feedback end -->
 
         <!-- FAQ SECTION start-->
         <section class="container">
